# math

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md
app/: CMakeLists.txt
cmake/: create_documents.cmake
include/example/: example.hpp
include/math/: utils.hpp
src/: main.cpp  utils.cpp
test/unit/: CMakeLists.txt  main.cpp  utils.cpp
